tools/cargo-check-external-types/tests/allow-some-types-expected-output.txt
error: Unapproved external type `external_lib::AssociatedGenericTrait` referenced in public API
   --> test-crate/src/lib.rs:125:1
    |
125 | pub fn fn_with_external_trait_bounds<I, O, E, T>(_thing: T)
    | ...
132 | }␊
    | ^
    |
    = in trait bound of `test_crate::fn_with_external_trait_bounds`

error: Unapproved external type `external_lib::AssociatedGenericTrait` referenced in public API
   --> test-crate/src/lib.rs:136:5
    |
136 |     type OtherThing: AssociatedGenericTrait<
    | ...
140 |     >;␊
    |     ^^
    |
    = in trait bound of `test_crate::SomeTraitWithExternalDefaultTypes::OtherThing`

2 errors emitted
